--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "start": "serve dist"
   },
   "dependencies": {
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "serve": "^14.2.3"
   },
